--- a/Emoji Dictionary/Base.lproj/Main.storyboard
+++ b/Emoji Dictionary/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k5L-EO-Mh5">
-                                <rect key="frame" x="0.0" y="2" width="375" height="665"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -31,8 +30,8 @@
                         <constraints>
                             <constraint firstItem="k5L-EO-Mh5" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="bJ6-vl-ito"/>
                             <constraint firstAttribute="trailing" secondItem="k5L-EO-Mh5" secondAttribute="trailing" id="cMn-dN-yBY"/>
+                            <constraint firstItem="k5L-EO-Mh5" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="d0x-LO-Dmn"/>
                             <constraint firstItem="k5L-EO-Mh5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eVe-IH-ty0"/>
-                            <constraint firstItem="k5L-EO-Mh5" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="2" id="hHI-by-JOH"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ueA-vo-1du"/>
@@ -80,6 +79,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="definitionLabel" destination="Ttf-OB-P7b" id="yjz-vC-Y0n"/>
                         <outlet property="emojiLabel" destination="kKZ-Ns-of4" id="Dx1-BP-CpN"/>
                     </connections>
                 </viewController>
