Added some classes and more info on Emojis. Will edit further.

--- a/Emoji Dictionary/Base.lproj/Main.storyboard
+++ b/Emoji Dictionary/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k5L-EO-Mh5">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -30,7 +30,7 @@
                         <constraints>
                             <constraint firstItem="k5L-EO-Mh5" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="bJ6-vl-ito"/>
                             <constraint firstAttribute="trailing" secondItem="k5L-EO-Mh5" secondAttribute="trailing" id="cMn-dN-yBY"/>
-                            <constraint firstItem="k5L-EO-Mh5" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="d0x-LO-Dmn"/>
+                            <constraint firstItem="k5L-EO-Mh5" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="70" id="d0x-LO-Dmn"/>
                             <constraint firstItem="k5L-EO-Mh5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eVe-IH-ty0"/>
                         </constraints>
                     </view>
@@ -68,17 +68,35 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category: Smiley" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q5f-UF-Mej">
+                                <rect key="frame" x="122.5" y="519" width="130" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BirthYear: 2010" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Je4-jr-dso">
+                                <rect key="frame" x="129.5" y="560" width="116.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="q5f-UF-Mej" firstAttribute="centerX" secondItem="WWH-ES-8LW" secondAttribute="centerX" id="67J-NM-ScH"/>
+                            <constraint firstItem="Je4-jr-dso" firstAttribute="top" secondItem="q5f-UF-Mej" secondAttribute="bottom" constant="20" id="A6r-cS-Xjl"/>
                             <constraint firstItem="kKZ-Ns-of4" firstAttribute="centerX" secondItem="WWH-ES-8LW" secondAttribute="centerX" id="Fna-06-DVD"/>
                             <constraint firstItem="kKZ-Ns-of4" firstAttribute="centerX" secondItem="WWH-ES-8LW" secondAttribute="centerX" id="Hd4-Xm-SMa"/>
                             <constraint firstItem="Ttf-OB-P7b" firstAttribute="top" secondItem="kKZ-Ns-of4" secondAttribute="bottom" constant="100" id="MF4-25-GAo"/>
                             <constraint firstItem="Ttf-OB-P7b" firstAttribute="centerX" secondItem="WWH-ES-8LW" secondAttribute="centerX" id="VDn-x0-hl9"/>
+                            <constraint firstItem="Je4-jr-dso" firstAttribute="centerX" secondItem="WWH-ES-8LW" secondAttribute="centerX" id="VgC-AY-M9s"/>
                             <constraint firstItem="kKZ-Ns-of4" firstAttribute="top" secondItem="2H8-No-NRX" secondAttribute="bottom" constant="75" id="h3B-3S-4Pu"/>
+                            <constraint firstItem="q5f-UF-Mej" firstAttribute="top" secondItem="Ttf-OB-P7b" secondAttribute="bottom" constant="20" id="v2R-1O-EhR"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="birthYearLabel" destination="Je4-jr-dso" id="2p6-Om-3QD"/>
+                        <outlet property="categoryLabel" destination="q5f-UF-Mej" id="uqc-v1-7IV"/>
                         <outlet property="definitionLabel" destination="Ttf-OB-P7b" id="yjz-vC-Y0n"/>
                         <outlet property="emojiLabel" destination="kKZ-Ns-of4" id="Dx1-BP-CpN"/>
                     </connections>
